# B1Connect

./: .env.example  .replit  SECURITY.md  build_flutter.sh  config.json  main.py  package-lock.json  package.json  pyproject.toml  replit.md
attached_assets/: Pasted-Here-s-a-description-technical-plan-for-developing-a-web-application-for-SAP-B1-Addon-using-Replit-1757775290598_1757775290605.txt  Pasted-Perfect-you-re-thinking-the-right-way-Since-Service-Layer-doesn-t-give-the-company-list-directly-1757784264306_1757784264308.txt  Pasted-To-add-new-menus-for-Location-Master-Branch-Master-and-Warehouse-Master-and-make-them-interactive--1757845441240_1757845441243.txt
backend/: app.py  config.py  session_manager.py
client/src/: App.tsx
client/src/components/: shared-layout.tsx
client/src/lib/: sap-service.ts
client/src/pages/: branch-master.tsx  business-partners.tsx  configuration.tsx  dashboard.tsx  items.tsx  location-master.tsx  login.tsx  sales-orders.tsx  warehouse-master.tsx
flutter_app/: README.md  pubspec.yaml
flutter_app/lib/: main.dart
flutter_app/lib/models/: api_response.dart  business_partner.dart  dashboard_stats.dart  database.dart  item.dart  sales_order.dart
flutter_app/lib/screens/: branch_master_screen.dart  business_partners_screen.dart  dashboard_screen.dart  items_screen.dart  location_master_screen.dart  login_screen.dart  sales_orders_screen.dart  warehouse_master_screen.dart
flutter_app/lib/services/: api_service.dart  auth_service.dart
server/: routes.ts  storage.ts
shared/: schema.ts
(+1 files in other folders)
