[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.3.0",
    "flask-sqlalchemy>=3.1.1",
    "flask==3.0.0",
    "flask-cors==4.0.0",
    "gunicorn>=23.0.0",
    "python-dotenv==1.0.0",
    "requests==2.31.0",
    "psycopg2-binary>=2.9.11",
]
